plugins {
    id 'java'
}

group = "local"
version = "1.0"

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.commons:commons-math3:3.6.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

/*
 * ВАЖНО:
 * У тебя код лежит в src/simcore/..., а не в src/main/java.
 * Поэтому мы явно указываем Gradle, где искать Java-файлы.
 */
sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
    }
}
